--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/core": "7.10.2",
     "@mantine/hooks": "7.10.2",
     "@next/bundle-analyzer": "^14.1.3",
+    "@ptkdev/webcomponent-patreon-box": "^1.1.0",
     "@tabler/icons-react": "^3.0.0",
     "next": "14.1.3",
     "react": "18.2.0",
